--- a/index.html
+++ b/index.html
@@ -11,8 +11,9 @@
 		<link href="style.css" rel="stylesheet" type="text/css">
 		<script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.6.4/jquery.min.js"></script>
 	</head>
-
+	
 	<body>
+	
 	<style>
 	
 	</style>		<!-- This is the top bit with the image. 
@@ -25,14 +26,49 @@
 			<div id="button">Refresh GPS: <div id="timer"></div></div>
 
 			<div class="area">
-				<div class="box box1"><div id="latitude">Blah</div></div>
-				<div class="box box2"><div id="longitude">Blah</div></div>
+				<div class="box box1"><div id="latitude"><p id="demo1"></p></div></div>
+				<div class="box box2"><div id="longitude"><p id="demo"></p></div></div>
 			</div>
 
 
 
 		<script>
+		
+		var x = document.getElementById("demo");
+		var y = document.getElementById("demo1");
+function getLocation() {
+	
+    if (navigator.geolocation) {
+        navigator.geolocation.getCurrentPosition(showPosition, showError);
+    } else { 
+        x.innerHTML = "Geolocation is not supported by this browser.";
+		y.innerHTML = "Geolocation is not supported by this browser.";
+    }
+}
+
+function showPosition(position) {
+    x.innerHTML = "Latitude: " + position.coords.latitude;
+    y.innerHTML =" Longitude: " + position.coords.longitude;		
+}
+
+function showError(error) {
+    switch(error.code) {
+        case error.PERMISSION_DENIED:
+            x.innerHTML = "User denied the request for Geolocation."
+            break;
+        case error.POSITION_UNAVAILABLE:
+            x.innerHTML = "Location information is unavailable."
+            break;
+        case error.TIMEOUT:
+            x.innerHTML = "The request to get user location timed out."
+            break;
+        case error.UNKNOWN_ERROR:
+            x.innerHTML = "An unknown error occurred."
+            break;
+    }
+}
 
 </script>
+	<button onclick="getLocation()">Try it</button>
 	</body>
 </html>
