--- a/SubConnection1.html
+++ b/SubConnection1.html
@@ -26,44 +26,44 @@
 
 
 <div id = "hot1">
-<div id = "Bowls" style = "left:200px;top: 600px; position: absolute;font-size: 40px; padding:0px;"><b>Hot Sandwiches:</b></div>
-<a href = "#"><button class="button"  style = "width:150px;height:110px;top:695px;left:257px;position: absolute;;font-size: 18px; padding:0px;" onclick = "getNutrition();"> <b>Avocado BLT Flatbread</b> </button></a>
-<a href = "#"><button class="button"  style = "width:150px;height:110px;top:895px;left:507px;position: absolute;;font-size: 18px; padding:0px;" onclick = "getNutrition();"> <b>Buffalo Chicken Sub</b> </button></a>
-<a href = "#"><button class="button"  style = "width:150px;height:110px;top:1095px;left:257px;position: absolute;;font-size: 18px; padding:0px;" onclick = "getNutrition();"> <b>Chicken Bacon Ranch</b> </button></a>
-<a href = "#"><button class="button"  style = "width:150px;height:110px;top:695px;left:507px;position: absolute;;font-size: 18px; padding:0px;" onclick = "getNutrition();"> <b>Baja Chicken</b> </button></a>
-<a href = "#"><button class="button"  style = "width:150px;height:110px;top:895px;left:257px;position: absolute;;font-size: 18px; padding:0px;" onclick = "getNutrition();"> <b>BBQ Crispy Chicken</b> </button></a>
-<a href = "#"><button class="button"  style = "width:150px;height:110px;top:1095px;left:507px;position: absolute;;font-size: 18px; padding:0px;" onclick = "getNutrition();"> <b>Chicken Caesar Club</b> </button></a>
+
+<a href = "#"><button class="button"  style = "width:150px;height:110px;top:695px;left:257px;position: absolute;;font-size: 18px; padding:0px;" onclick = "getNutrition(this.id, 'Avocado BLT Flatbread');"> <b>Avocado BLT Flatbread</b> </button></a>
+<a href = "#"><button class="button"  style = "width:150px;height:110px;top:895px;left:507px;position: absolute;;font-size: 18px; padding:0px;" onclick = "getNutrition(this.id, 'Buffalo Chicken Sub');"> <b>Buffalo Chicken Sub</b> </button></a>
+<a href = "#"><button class="button"  style = "width:150px;height:110px;top:1095px;left:257px;position: absolute;;font-size: 18px; padding:0px;" onclick = "getNutrition(this.id, 'Chicken Bacon Ranch');"> <b>Chicken Bacon Ranch</b> </button></a>
+<a href = "#"><button class="button"  style = "width:150px;height:110px;top:695px;left:507px;position: absolute;;font-size: 18px; padding:0px;" onclick = "getNutrition(this.id, 'Baja Chicken');"> <b>Baja Chicken</b> </button></a>
+<a href = "#"><button class="button"  style = "width:150px;height:110px;top:895px;left:257px;position: absolute;;font-size: 18px; padding:0px;" onclick = "getNutrition(this.id, 'BBQ Crispy Chicken');"> <b>BBQ Crispy Chicken</b> </button></a>
+<a href = "#"><button class="button"  style = "width:150px;height:110px;top:1095px;left:507px;position: absolute;;font-size: 18px; padding:0px;" onclick = "getNutrition(this.id, 'Chicken Caesar Club');"> <b>Chicken Caesar Club</b> </button></a>
 </div>
 
 <div id = "hot2" style = "visibility: hidden;">
-<div id = "Bowls" style = "left:200px;top: 600px; position: absolute;font-size: 40px; padding:0px;"><b>Hot Sandwiches:</b></div>
-<a href = "#"><button class="button"  style = "width:150px;height:110px;top:695px;left:257px;position: absolute;font-size: 18px; padding:0px;" onclick = "getNutrition();"> <b>Chicken Parmesan Sub</b> </button></a>
-<a href = "#"><button class="button"  style = "width:150px;height:110px;top:895px;left:507px;position: absolute;font-size: 18px; padding:0px;" onclick = "getNutrition();"> <b>Recued Fat Chicken Parm Sub</b> </button></a>
-<a href = "#"><button class="button"  style = "width:150px;height:110px;top:1095px;left:257px;position: absolute;font-size: 18px; padding:0px;" onclick = "getNutrition();"> <b>Vegetarian Sub</b> </button></a>
-<a href = "#"><button class="button"  style = "width:150px;height:110px;top:695px;left:507px;position: absolute;font-size: 18px; padding:0px;" onclick = "getNutrition();"> <b>Meatball Sub</b> </button></a>
-<a href = "#"><button class="button"  style = "width:150px;height:110px;top:895px;left:257px;position: absolute;font-size: 18px; padding:0px;" onclick = "getNutrition();"> <b>Reduced Fat Buffalo Chicken</b> </button></a>
-<a href = "#"><button class="button"  style = "width:150px;height:110px;top:1095px;left:507px;position: absolute;font-size: 18px; padding:0px;" onclick = "getNutrition();"> <b>Veggie Wrap</b> </button></a>
+
+<a href = "#"><button class="button"  style = "width:150px;height:110px;top:695px;left:257px;position: absolute;font-size: 18px; padding:0px;" onclick = "getNutrition(this.id, 'Chicken Parmesan Sub');"> <b>Chicken Parmesan Sub</b> </button></a>
+<a href = "#"><button class="button"  style = "width:150px;height:110px;top:895px;left:507px;position: absolute;font-size: 18px; padding:0px;" onclick = "getNutrition(this.id, 'Recued Fat Chicken Parm Sub');"> <b>Recued Fat Chicken Parm Sub</b> </button></a>
+<a href = "#"><button class="button"  style = "width:150px;height:110px;top:1095px;left:257px;position: absolute;font-size: 18px; padding:0px;" onclick = "getNutrition(this.id, 'Vegetarian Sub');"> <b>Vegetarian Sub</b> </button></a>
+<a href = "#"><button class="button"  style = "width:150px;height:110px;top:695px;left:507px;position: absolute;font-size: 18px; padding:0px;" onclick = "getNutrition(this.id, 'Meatball Sub');"> <b>Meatball Sub</b> </button></a>
+<a href = "#"><button class="button"  style = "width:150px;height:110px;top:895px;left:257px;position: absolute;font-size: 18px; padding:0px;" onclick = "getNutrition(this.id, 'Reduced Fat Buffalo Chicken');"> <b>Reduced Fat Buffalo Chicken</b> </button></a>
+<a href = "#"><button class="button"  style = "width:150px;height:110px;top:1095px;left:507px;position: absolute;font-size: 18px; padding:0px;" onclick = "getNutritionthis.id, 'Veggie Wrap');"> <b>Veggie Wrap</b> </button></a>
 </div>
 
 
 <div id = "cold1" style = "visibility: hidden;">
-<div id = "Bowls" style = "left:200px;top: 600px; position: absolute;font-size: 40px; padding:0px;"><b>Cold Sandwiches:</b></div>
-<a href = "#"><button class="button"  style = "width:150px;height:110px;top:695px;left:257px;position: absolute;;font-size: 18px; padding:0px;" onclick = "getNutrition();"> <b>BLT</b> </button></a>
-<a href = "#"><button class="button"  style = "width:150px;height:110px;top:895px;left:507px;position: absolute;;font-size: 18px; padding:0px;" onclick = "getNutrition();"> <b>Egg Salad</b> </button></a>
-<a href = "#"><button class="button"  style = "width:150px;height:110px;top:1095px;left:257px;position: absolute;;font-size: 18px; padding:0px;" onclick = "getNutrition();"> <b>Ham & Cheese</b> </button></a>
-<a href = "#"><button class="button"  style = "width:150px;height:110px;top:695px;left:507px;position: absolute;;font-size: 18px; padding:0px;" onclick = "getNutrition();"> <b>California Smoked Turkey</b> </button></a>
-<a href = "#"><button class="button"  style = "width:150px;height:110px;top:895px;left:257px;position: absolute;;font-size: 18px; padding:0px;" onclick = "getNutrition();"> <b>Chicken Salad Sub</b> </button></a>
-<a href = "#"><button class="button"  style = "width:150px;height:110px;top:1095px;left:507px;position: absolute;;font-size: 18px; padding:0px;" onclick = "getNutrition();"> <b>Italian Sub</b> </button></a>
+
+<a href = "#"><button class="button"  style = "width:150px;height:110px;top:695px;left:257px;position: absolute;;font-size: 18px; padding:0px;" onclick = "getNutrition(this.id, 'BLT');"> <b>BLT</b> </button></a>
+<a href = "#"><button class="button"  style = "width:150px;height:110px;top:895px;left:507px;position: absolute;;font-size: 18px; padding:0px;" onclick = "getNutrition(this.id, 'Egg Salad');"> <b>Egg Salad</b> </button></a>
+<a href = "#"><button class="button"  style = "width:150px;height:110px;top:1095px;left:257px;position: absolute;;font-size: 18px; padding:0px;" onclick = "getNutrition(this.id, 'Ham & Cheese');"> <b>Ham & Cheese</b> </button></a>
+<a href = "#"><button class="button"  style = "width:150px;height:110px;top:695px;left:507px;position: absolute;;font-size: 18px; padding:0px;" onclick = "getNutrition(this.id, 'California Smoked Turkey');"> <b>California Smoked Turkey</b> </button></a>
+<a href = "#"><button class="button"  style = "width:150px;height:110px;top:895px;left:257px;position: absolute;;font-size: 18px; padding:0px;" onclick = "getNutrition(this.id, 'Chicken Salad Sub');"> <b>Chicken Salad Sub</b> </button></a>
+<a href = "#"><button class="button"  style = "width:150px;height:110px;top:1095px;left:507px;position: absolute;;font-size: 18px; padding:0px;" onclick = "getNutrition(this.id, 'Italian Sub');"> <b>Italian Sub</b> </button></a>
 </div>
 
 <div id = "cold2" style = "visibility: hidden;">
-<div id = "Bowls" style = "left:200px;top: 600px; position: absolute;font-size: 40px; padding:0px;"><b>Cold Sandwiches:</b></div>
-<a href = "#"><button class="button"  style = "width:150px;height:110px;top:695px;left:257px;position: absolute;font-size: 18px; padding:0px;" onclick = "getNutrition();"> <b>Roast Beef</b> </button></a>
-<a href = "#"><button class="button"  style = "width:150px;height:110px;top:895px;left:507px;position: absolute;font-size: 18px; padding:0px;" onclick = "getNutrition();"> <b>Turkey & Ham Club</b> </button></a>
-<a href = "#"><button class="button"  style = "width:150px;height:110px;top:1095px;left:257px;position: absolute;font-size: 18px; padding:0px;" onclick = "getNutrition();"> <b>Vegetarian Sub</b> </button></a>
-<a href = "#"><button class="button"  style = "width:150px;height:110px;top:695px;left:507px;position: absolute;font-size: 18px; padding:0px;" onclick = "getNutrition();"> <b>Three Cheese Sub</b> </button></a>
-<a href = "#"><button class="button"  style = "width:150px;height:110px;top:895px;left:257px;position: absolute;font-size: 18px; padding:0px;" onclick = "getNutrition();"> <b>Tuna Salad Sub</b> </button></a>
-<a href = "#"><button class="button"  style = "width:150px;height:110px;top:1095px;left:507px;position: absolute;font-size: 18px; padding:0px;" onclick = "getNutrition();"> <b>Veggie Wrap</b> </button></a>
+
+<a href = "#"><button class="button"  style = "width:150px;height:110px;top:695px;left:257px;position: absolute;font-size: 18px; padding:0px;" onclick = "getNutrition(this.id, 'Roast Beef');"> <b>Roast Beef</b> </button></a>
+<a href = "#"><button class="button"  style = "width:150px;height:110px;top:895px;left:507px;position: absolute;font-size: 18px; padding:0px;" onclick = "getNutrition(this.id, 'Turkey & Ham Club');"> <b>Turkey & Ham Club</b> </button></a>
+<a href = "#"><button class="button"  style = "width:150px;height:110px;top:1095px;left:257px;position: absolute;font-size: 18px; padding:0px;" onclick = "getNutrition(this.id, 'Vegetarian Sub');"> <b>Vegetarian Sub</b> </button></a>
+<a href = "#"><button class="button"  style = "width:150px;height:110px;top:695px;left:507px;position: absolute;font-size: 18px; padding:0px;" onclick = "getNutrition(this.id, 'Three Cheese Sub');"> <b>Three Cheese Sub</b> </button></a>
+<a href = "#"><button class="button"  style = "width:150px;height:110px;top:895px;left:257px;position: absolute;font-size: 18px; padding:0px;" onclick = "getNutrition(this.id, 'Tuna Salad Sub');"> <b>Tuna Salad Sub</b> </button></a>
+<a href = "#"><button class="button"  style = "width:150px;height:110px;top:1095px;left:507px;position: absolute;font-size: 18px; padding:0px;" onclick = "getNutrition(this.id, 'Veggie Wrap');"> <b>Veggie Wrap</b> </button></a>
 </div>
 
 
@@ -87,9 +87,10 @@
 <a href = "cart.html"><button class="button" style = "width:100px;height:50px;top:1380px;left:655px;position: absolute;background-color: #808080;font-size: 22px;padding:0px;" src="Grill.png" ><img src="cart.png" height="55" style></button></a>
 <h1 style = "font-size: 18px;color:#FFFFFF;position:absolute; top:1450px;left:695px;font-style: arial;"><u>Cart</u></h1>
 
-<section class="performance-facts" id = "Nutrition" style = "position: absolute; visibility: hidden;top: 520px; left: 305px;">
+<div id = "price" style = "font-size:18px; visibility:hidden;position:absolute;left: 325px"></div>
+<section class="performance-facts" id = "Nutrition" style = "position: absolute; visibility: hidden;top: 570px; left: 305px;background-color:#f5f5f0;border-color: #eaeae1;color: #808080;">
   <header class="performance-facts__header">
-  <div id = "price" style = "font-size:18px;">$3.49</div>
+
     <h1 class="performance-facts__title">Nutrition Facts</h1>
     <p>Serving Size 1/2 cup (about 82g)
     <p>Serving Per Container 8</p>
@@ -233,12 +234,12 @@
   </table>
   
   
- <a href = "#"><img src = "add.png" id = "add" style = "width:50px;height:50px;top:00px;left:230px;position: absolute;font-size: 18px; padding:0px; visibility: hidden" onclick ="src = 'download.png'"></button></a>
- <a href = "#"><img src = "add.png" id = "add" style = "position: absolute;visibility: hidden" onclick ="src = 'download.png'"></button></a>
+<a href = "#"><img src = "add.png" id = "add" style = "width:50px;height:50px;top:600px;left:230px;position: absolute;font-size: 18px; padding:0px; visibility: hidden" onclick ="changeButton();"></button></a>
+<div id  = "add1" style = "width:100px;height:50px;top:650px;left:210px;position: absolute;font-size: 18px; padding:0px; visibility: hidden"><b>Add to Cart</b></div>
 <div id = "customize">
  <input type="checkbox" name="vehicle" value="Car" > Tomato<br>
  <input type="checkbox" name="vehicle" value="Car" > Lettuce<br>
- <input type="checkbox" name="vehicle" value="Car" > Onions<br>
+ <input type="checkbox" name="vehicle" value="Car" > Onions<br><br>
  <input type="checkbox" name="vehicle" value="Car" > Bacon + $1.49<br>
  </div>
 </section>
@@ -267,6 +268,7 @@
 	var Nutrition = document.getElementById("Nutrition");
 	var M = document.getElementById("M");
 	var add = document.getElementById("add");
+	var add1 = document.getElementById("add1");
 	
 	var hot1 = document.getElementById("hot1");
 	hot1.style.visibility = 'visible';
@@ -280,6 +282,8 @@
 	var b = document.getElementById("bButton");
 	
 	var customize = document.getElementById("customize");
+	
+	var price = document.getElementById("price");
 
 		function changeImage() {
 			image.src = "a1.png";
@@ -296,6 +300,7 @@
 		function toFood(){
 			Nutrition.style.visibility = 'hidden';
 			add.style.visibility  = 'hidden';
+			add1.style.visibility  = 'hidden';
 			hot2.style.visibility = 'hidden';
 			hot1.style.visibility = 'visible';
 			cold2.style.visibility = 'hidden';
@@ -303,6 +308,8 @@
 			b.style.visibility = 'visible';
 			f.style.visibility = 'hidden';
 			customize.style.visibility  = 'hidden';
+			add.src = "add.png";
+			add1.innerHTML = "Add to cart";
 			
 		}	
 	
@@ -367,6 +374,7 @@
 		
 			Nutrition.style.visibility = 'hidden';
 			add.style.visibility  = 'hidden';
+			add1.style.visibility  = 'hidden';
 			hot1.style.visibility = 'hidden';
 			hot2.style.visibility = 'hidden';	
 			cold2.style.visibility = 'hidden';
@@ -374,12 +382,12 @@
 			f.style.visibility = 'hidden';
 			cold1.style.visibility = 'visible';
 			customize.style.visibility  = 'hidden';
+			add.src = "add.png";
+			add1.innerHTML = "Add to cart";
 			
 		}
 		
-	
-		
-		function getNutrition(){
+		function  getNutrition(clicked_class, name){
 			hot1.style.visibility = 'hidden';
 			hot2.style.visibility = 'hidden';
 			cold1.style.visibility = 'hidden';
@@ -389,7 +397,24 @@
 			b.style.visibility = 'hidden';
 			Nutrition.style.visibility = "visible";
 			add.style.visibility  = 'visible';
+			add1.style.visibility  = 'visible';
+			price.style.visibility = "visible";
+			price.innerHTML = name+".........................$3.49";
 		
+		}
+		
+		function changeButton(){
+			
+			if(add.src.match("add.png")){
+				add.src = "download.png";
+				add1.innerHTML = "Added to cart";
+				}
+			else{
+				add.src = "add.png";
+				add1.innerHTML = "Add to cart";
+			}
+			
+			
 		}
 		
 		
