--- a/pay.html
+++ b/pay.html
@@ -2,17 +2,17 @@
 <html>
 <head>
 <meta charset="UTF-8">
-<title>Untitled Document</title>
+<title>Payment</title>
 <link href="pay.css" rel="stylesheet" type="text/css"/>
 </head>
 
 <body>
 <div class = "content">
 <div class = "Banner">
-	<div class ="Help"><a href ="faq.html"><img src="2.png"></a>
+	<div class ="Help"><a href ="faq.html"><img src="b.png"></a>
     <span id = "help" style = "color:white;"><u>Help</u></span>
     </div>
-    <div class = "Logo"><img id = "logo" src="ieat.png"></div>
+    <div class = "Logo"><img id = "logo" src="Capture.png"></div>
     </div>
     
 <div class = "middle">
@@ -20,7 +20,7 @@
 	<span id = "ordernumber">Order Number: 100
     </span>
     </div>
-    <div class="back"><a href ="#"><img src="Back-48.png" width="30" height="48"></a></div>
+    <div class="back"><a href ="cart.html"><img src="f.png" width="30" height="48"></a></div>
     <div class = "lists">
     <ul>
     <li><span>1. Meal Credits ...... 21</span><a href="#"><img id= "delete" src="Coins-48.png"></a></li>
@@ -29,15 +29,15 @@
     </ul>
     </div>
     <div class = "add"><a href="#"><img src="Plus-48.png" width="40" height="40" ></a></div>
-<div class="total"><img id ="cancel" src="Cancel-48.png"><a href="#"><img src="Bank Cards-48.png"><span id= "pay">Pay</span></div></a>
+
 </div>
 
 <div class = "bottom">
 <ul>
-	<li><a href ="profile.html"><img src="account.png" width ="40" height="40"><span style = "left:467px;top:800px;position:absolute;color:white;"><u><b>Account</b></u></span></a></li>
-    <li><a href ="lists.html"><img src="list.png"width ="40" height="40"><span style = "left:562px;top:800px;position:absolute;color:white;"><b><u>List</u></b></span></a></li>
-    <li><a href ="HomePage1.html"><img src="home.png"width ="40" height="40"><span style = "left:642px;top:800px;position:absolute;color:white;"><b><u>Home</u></b></span></a></li>
-    <li><a href ="cart.html"><img src="cart.png"width ="40" height="40"><span style = "left:728px;top:800px;position:absolute;color:white;"><b><u>Cart</u></b></span></a></li>
+	<li><a href ="profile.html"><img src="account.png" width ="40" height="40"><span style = "left:487px;top:800px;position:absolute;color:white;"><u><b>Account</b></u></span></a></li>
+    <li><a href ="lists.html"><img src="list.png"width ="40" height="40"><span style = "left:582px;top:800px;position:absolute;color:white;"><b><u>List</u></b></span></a></li>
+    <li><a href ="HomePage1.html"><img src="home.png"width ="40" height="40"><span style = "left:662px;top:800px;position:absolute;color:white;"><b><u>Home</u></b></span></a></li>
+    <li><a href ="cart.html"><img src="cart.png"width ="40" height="40"><span style = "left:748px;top:800px;position:absolute;color:white;"><b><u>Cart</u></b></span></a></li>
 </ul>
 	
 </div>
