--- a/profile.html
+++ b/profile.html
@@ -43,7 +43,7 @@
 <hr width="75%">
 <br><br><br><br><br>
 <a href = "LoginPage.html"><img src = "lol.png" style = "position:absolute; left:660px;" height="48" width="48"></img></a><br><br><br>
-<font face="Tahoma" size = "5" style = "left:645px;position:absolute;" color = "grey" >Log out</font>
+<font face="Tahoma" size = "5" style = "left:645px;position:absolute;" color = "grey" ><u>Log out</u></font>
 
 
 
