--- a/cart.html
+++ b/cart.html
@@ -20,24 +20,24 @@
 	<span id = "ordernumber">Order Number: 100
     </span>
     </div>
-    <div class="back"><a href ="#"><img src="f.png" width="30" height="48"></a></div>
+    
     <div class = "lists">
     <ul>
     <li><span>1. Cheeseburger......$ 3.50</span><a href="#"><img id= "delete" src="Cancel-48.png"></a></li>
     <li><span>2. Large Combo.......$ 1.50</span><a href="#"><img id= "delete" src="Cancel-48.png"></a></li>
-    <li><span>3. Vanilla cupcake....$ 2.50</span><a href="#"><img id= "delete" src="Cancel-48.png"></a></li>
+    
     </ul>
     </div>
     <div class = "add"><a href="#"><img src="Plus-48.png" width="40" height="40" ></a></div>
-<div class="total"><span id="total">Total: $ 7.50</span><a href = "#"><img src="Bank Cards-48.png"><span id= "pay"><u>Pay</u></span></div></a>
+<div class="total"><span id="total">Total: $ 5.00</span><a href = "pay.html"><img src="Bank Cards-48.png"><span id= "pay"><u>Pay</u></span></div></a>
 </div>
 
 <div class = "bottom">
 <ul>
-	<li><a href ="profile.html"><img src="account.png" width ="40" height="40"><span><u>Account</u></span></a></li>
-    <li><a href ="lists.html"><img src="list.png"width ="40" height="40"><span style = "left:578px;top:800px;position:absolute;"><u>List</u></span></a></li>
-    <li><a href ="HomePage1.html"><img src="home.png"width ="40" height="40"><span><u>Home</u></span></a></li>
-    <li><a href ="cart.html"><img src="cart.png"width ="40" height="40"><span style = "left:743px;top:800px;position:absolute;"><u>Cart</u></span></a></li>
+	<li><a href ="profile.html"><img src="account.png" width ="40" height="40" ><span style = "color: white;position:absolute;left:565px;top:795px;"><u>Account</u></span></a></li>
+    <li><a href ="lists.html"><img src="list.png"width ="40" height="40"><span style = "left:665px;top:795px;position:absolute;color: white;"><u>List</u></span></a></li>
+    <li><a href ="HomePage1.html"><img src="home.png"width ="40" height="40"><span style = "left:740px;top:795px;position:absolute;color: white;"><u>Home</u></span></a></li>
+    <li><a href ="cart.html"><img src="cart.png"width ="40" height="40"><span style = "left:828px;top:795px;position:absolute;color: white;"><u>Cart</u></span></a></li>
 </ul>
 	
 </div>
