--- a/list2.html
+++ b/list2.html
@@ -34,10 +34,10 @@
 
 <div class = "bottom">
 <ul>
-	<li><a href ="profile.html"><img src="account.png" width ="40" height="40"><span style = "left:460px;top:800px;position:absolute;"><u>Account</u></span></a></li>
-    <li><a href ="lists.html"><img src="list.png"width ="40" height="40"><span style = "left:560px;top:800px;position:absolute;"><u>List</u></span></a></li>
-    <li><a href ="HomePage1.html"><img src="home.png"width ="40" height="40"><span style = "left:637px;top:800px;position:absolute;"><u>Home</u></span></a></li>
-    <li><a href ="cart.html"><img src="cart.png"width ="40" height="40"><span style = "left:728px;top:800px;position:absolute;"><u>Cart</u></span></a></li>
+	<li><a href ="profile.html"><img src="account.png" width ="40" height="40"><span style = "left:635px;top:800px;position:absolute;"><b><u>Account</u></b></span></a></li>
+    <li><a href ="lists.html"><img src="list.png"width ="40" height="40"><span style = "left:737px;top:800px;position:absolute;"><b><u>List</u></b></span></a></li>
+    <li><a href ="HomePage1.html"><img src="home.png"width ="40" height="40"><span style = "left:815px;top:800px;position:absolute;"><b><u>Home</u><b></span></a></li>
+    <li><a href ="cart.html"><img src="cart.png"width ="40" height="40"><span style = "left:905px;top:800px;position:absolute;"><b><u>Cart</u></b></span></a></li>
 </ul>
 	
 </div>
